Enhance Minecraft modding support by updating agent configurations, adding new skills and prompts, and refining villager AI tasks. Remove unused block classes and improve item interactions for profession badges.

--- a/.github/tools/tools.toolsets.jsonc
+++ b/.github/tools/tools.toolsets.jsonc
@@ -6,5 +6,10 @@
     "tools": ["search", "web", "read", "edit"],
     "description": "Tools used for Fabric modding tasks, including code editing and documentation lookup.",
     "icon": "tools"
+  },
+  "minecraft_modding_tools": {
+    "tools": ["search", "web", "read", "edit"],
+    "description": "Tools used for Minecraft modding tasks, including code editing and documentation lookup.",
+    "icon": "tools"
   }
 }
