--- a/gradle.properties
+++ b/gradle.properties
@@ -30,3 +30,9 @@ mod_icon=assets/vp/icon.png
 mod_entrypoint_main=dk.mosberg.VP
 mod_entrypoint_client=dk.mosberg.client.VPClient
 mod_entrypoint_datagen=dk.mosberg.datagen.VPDataGenerator
+
+# Suggested Mod Dependencies (update as needed)
+architectury_version=19.0.1
+cloth_config_version=21.11.153
+rei_version=21.11.814
+modmenu_version=17.0.0-beta.2
