--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
+# Add version property for template expansion compatibility
+version=1.0.0
 # Gradle JVM optimization (from your preferences)
 org.gradle.jvmargs=-Xmx4G -XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=200
 org.gradle.parallel=true
